home page responsive fixed on small screen and mobile

--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -1,22 +1,47 @@
 .homePage {
   margin: auto;
-  .left {
-    margin-right: 40px;
-    .title {
-      font-size: 48px;
-      margin-bottom: 10px;
+  .section {
+    .left {
+      margin-right: 40px;
+      .title {
+        font-size: 48px;
+        text-align: left;
+        margin-bottom: 10px;
+        @media only screen and (max-width: 1000px) {
+          font-size: 32px;
+        }
+        @media only screen and (max-width: 760px) {
+          text-align: center;
+        }
+      }
+      .description {
+        margin-top: 0;
+        font-size: 20px;
+        text-align: left;
+        @media only screen and (max-width: 1000px) {
+          font-size: 16px;
+        }
+        @media only screen and (max-width: 760px) {
+          text-align: center;
+        }
+      }
+      @media only screen and (max-width: 760px) {
+        margin-bottom: 40px;
+      }
     }
-    .description {
-      margin-top: 0;
-      font-size: 20px;
-      text-align: left;
+    .right {
+      margin: auto;
+      .button {
+        font-size: 32px;
+        padding: 25px 60px;
+        @media only screen and (max-width: 1000px) {
+          font-size: 24px;
+          padding: 20px 40px;
+        }
+      }
     }
-  }
-  .right {
-    margin: auto;
-    .button {
-      font-size: 32px;
-      padding: 25px 70px;
+    @media only screen and (max-width: 760px) {
+      flex-direction: column;
     }
   }
 }
